@@ -1,3 +1,10 @@
+2012-05-18  Filip Pizlo  <fpizlo@apple.com>
+
+        Unreviewed, build fix.
+
+        * dfg/DFGSpeculativeJIT.h:
+        (JSC::DFG::SpeculativeJIT::silentSavePlanForGPR):
+
 2012-04-17  Filip Pizlo  <fpizlo@apple.com>
 
         DFG should have constant propagation
